fix [#32604] Loop select broken with Clipped view and wireframe